[gd_scene load_steps=22 format=3 uid="uid://bqjh1bot43qap"]

[ext_resource type="Script" uid="uid://d0dtbdadqt3ak" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/account_menu.gd" id="1_45dyf"]
[ext_resource type="Texture2D" uid="uid://dmlw3j7janvly" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/account_bg.png" id="1_hsiwq"]
[ext_resource type="Texture2D" uid="uid://bpfl5uj2tg03l" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/account_icons/account_icon_1.png" id="2_45dyf"]
[ext_resource type="Texture2D" uid="uid://i0vptnaahjwj" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/edit_button.png" id="3_cublh"]
[ext_resource type="Texture2D" uid="uid://fbqyhehw677h" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/edit_button_selected.png" id="4_cgpuv"]
[ext_resource type="Texture2D" uid="uid://bwrm7vl1moq4w" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/register_button.png" id="5_jvduq"]
[ext_resource type="Texture2D" uid="uid://xtmt2gijg7b3" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/register_button_selected.png" id="6_wlfyi"]
[ext_resource type="Texture2D" uid="uid://jfvh0edm28qr" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/login_button.png" id="7_odx28"]
[ext_resource type="Texture2D" uid="uid://cwdnvghl48y1j" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/login_button_selected.png" id="8_4yjph"]
[ext_resource type="Texture2D" uid="uid://dqa3m3i4gmhwl" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/login_backend_button.png" id="9_v1uqk"]
[ext_resource type="Texture2D" uid="uid://cy3v3ljbi1tcr" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/login_backend_button_selected.png" id="10_6pdo8"]
[ext_resource type="Texture2D" uid="uid://bpx51raefwebo" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/warning_notification_icon.png" id="11_a3o6m"]
[ext_resource type="PackedScene" uid="uid://blm0md6ls2atm" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/users_list/users_list.tscn" id="12_orcds"]
[ext_resource type="FontFile" uid="uid://ns85otisc51h" path="res://global_assets/fonts/Boldstone-Regular.ttf" id="15_ksvcc"]
[ext_resource type="FontFile" uid="uid://b4nmgmlb4xi24" path="res://screens/initial_screens/splash_screen_2/assets/EdgeDisplay-Regular.otf" id="17_srait"]
[ext_resource type="FontFile" uid="uid://c037te0jknb01" path="res://global_assets/fonts/Molot.otf" id="18_i1n8u"]
[ext_resource type="PackedScene" uid="uid://c63ax2yyiebwr" path="res://screens/original_test_project_scenes/login_register_menu/pop_ups/log_reg_pop_ups/login_pop_up/login_pop_up.tscn" id="19_cublh"]
[ext_resource type="PackedScene" uid="uid://b1q1dc6ig3yxq" path="res://screens/original_test_project_scenes/login_register_menu/pop_ups/log_reg_pop_ups/register_pop_up/register_pop_up.tscn" id="20_cgpuv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsiwq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45dyf"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cublh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="AccountMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_45dyf")

[node name="AccountBg" type="Sprite2D" parent="."]
position = Vector2(966, 601)
texture = ExtResource("1_hsiwq")

[node name="AccountIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 401.0
offset_top = 294.0
offset_right = 629.0
offset_bottom = 511.0
texture = ExtResource("2_45dyf")

[node name="EditAccountBtn" type="TextureButton" parent="AccountIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 149.0
offset_top = 11.0
offset_right = 221.0
offset_bottom = 78.0
texture_normal = ExtResource("3_cublh")
texture_pressed = ExtResource("4_cgpuv")
texture_hover = ExtResource("4_cgpuv")
texture_focused = ExtResource("4_cgpuv")

[node name="RegisterButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1233.0
offset_top = 275.0
offset_right = 1539.0
offset_bottom = 342.0
texture_normal = ExtResource("5_jvduq")
texture_pressed = ExtResource("6_wlfyi")
texture_hover = ExtResource("6_wlfyi")
texture_focused = ExtResource("6_wlfyi")

[node name="LoginButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1233.0
offset_top = 366.0
offset_right = 1539.0
offset_bottom = 433.0
texture_normal = ExtResource("7_odx28")
texture_pressed = ExtResource("8_4yjph")
texture_hover = ExtResource("8_4yjph")
texture_focused = ExtResource("8_4yjph")

[node name="LoginBackendButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1233.0
offset_top = 453.0
offset_right = 1539.0
offset_bottom = 520.0
texture_normal = ExtResource("9_v1uqk")
texture_pressed = ExtResource("10_6pdo8")
texture_hover = ExtResource("10_6pdo8")
texture_focused = ExtResource("10_6pdo8")

[node name="WarningNotificationIcon" type="Sprite2D" parent="LoginBackendButton"]
position = Vector2(299, 10)
texture = ExtResource("11_a3o6m")

[node name="UsersList" parent="." instance=ExtResource("12_orcds")]
layout_mode = 0
offset_left = 394.0
offset_top = 599.0
offset_right = 896.0
offset_bottom = 896.0

[node name="UsernameTextEdit" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 659.0
offset_top = 295.0
offset_right = 1170.0
offset_bottom = 356.0
theme_override_colors/font_readonly_color = Color(0.878431, 0.847059, 0.772549, 1)
theme_override_colors/font_color = Color(0.878431, 0.847059, 0.772549, 1)
theme_override_constants/line_spacing = 6
theme_override_fonts/font = ExtResource("17_srait")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_hsiwq")
theme_override_styles/focus = SubResource("StyleBoxFlat_45dyf")
theme_override_styles/read_only = SubResource("StyleBoxFlat_cublh")
text = "USERNAME"
editable = false

[node name="EditUsernameIcon" type="TextureRect" parent="UsernameTextEdit"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 445.0
offset_top = -4.0
offset_right = 517.0
offset_bottom = 63.0
texture = ExtResource("3_cublh")

[node name="XPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 739.0
offset_top = 399.0
offset_right = 1003.0
offset_bottom = 436.0
theme_override_colors/font_color = Color(0.878431, 0.847059, 0.772549, 1)
theme_override_fonts/font = ExtResource("15_ksvcc")
theme_override_font_sizes/font_size = 46
text = "1200"

[node name="CoinsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 739.0
offset_top = 462.0
offset_right = 1003.0
offset_bottom = 499.0
theme_override_colors/font_color = Color(0.878431, 0.847059, 0.772549, 1)
theme_override_fonts/font = ExtResource("15_ksvcc")
theme_override_font_sizes/font_size = 46
text = "300"

[node name="StatsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1048.0
offset_top = 599.0
offset_right = 1312.0
offset_bottom = 636.0
theme_override_colors/font_color = Color(0.878431, 0.847059, 0.772549, 1)
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("18_i1n8u")
theme_override_font_sizes/font_size = 28
text = "levels played:
Levels won:
levels lost:
total coins collected:
total hp collected:"

[node name="LevelsPlayedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1383.0
offset_top = 599.0
offset_right = 1535.0
offset_bottom = 632.0
theme_override_colors/font_color = Color(0.745098, 0.678431, 0.588235, 1)
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("18_i1n8u")
theme_override_font_sizes/font_size = 28
text = "100"
horizontal_alignment = 2

[node name="LevelsWonLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1383.0
offset_top = 638.0
offset_right = 1535.0
offset_bottom = 671.0
theme_override_colors/font_color = Color(0.745098, 0.678431, 0.588235, 1)
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("18_i1n8u")
theme_override_font_sizes/font_size = 28
text = "100"
horizontal_alignment = 2

[node name="LevelsLostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1383.0
offset_top = 680.0
offset_right = 1535.0
offset_bottom = 713.0
theme_override_colors/font_color = Color(0.745098, 0.678431, 0.588235, 1)
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("18_i1n8u")
theme_override_font_sizes/font_size = 28
text = "100"
horizontal_alignment = 2

[node name="TotalCoinsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1383.0
offset_top = 722.0
offset_right = 1535.0
offset_bottom = 755.0
theme_override_colors/font_color = Color(0.745098, 0.678431, 0.588235, 1)
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("18_i1n8u")
theme_override_font_sizes/font_size = 28
text = "100"
horizontal_alignment = 2

[node name="TotalHPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1383.0
offset_top = 766.0
offset_right = 1535.0
offset_bottom = 799.0
theme_override_colors/font_color = Color(0.745098, 0.678431, 0.588235, 1)
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("18_i1n8u")
theme_override_font_sizes/font_size = 28
text = "100"
horizontal_alignment = 2

[node name="LoginPopUp" parent="." instance=ExtResource("19_cublh")]
visible = false
layout_mode = 1

[node name="RegisterPopUp" parent="." instance=ExtResource("20_cgpuv")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="text_changed" from="UsernameTextEdit" to="." method="_on_username_text_edit_text_changed"]
